# chipi

./: Cargo.toml  LICENSE  README.md
chipi-build/: Cargo.toml
chipi-build/src/: lib.rs
chipi-cli/: Cargo.toml
chipi-cli/src/: main.rs
chipi-core/: Cargo.toml
chipi-core/src/: backend.rs  codegen.rs  codegen_binja.rs  codegen_cpp.rs  codegen_ida.rs  codegen_python.rs  config.rs  format_parser.rs  instr_gen.rs  lib.rs  lut_gen.rs  parser.rs  tree.rs  types.rs  validate.rs
chipi-core/src/backend/: binja.rs  cpp.rs  ida.rs  rust.rs
chipi-core/tests/: pattern_precedence_test.rs  variable_length_test.rs
chipi-core/tests/fixtures/: test_dsp.chipi  test_ida.toml
src/: codegen.rs  error.rs  format_parser.rs  instr_gen.rs  lib.rs  lut_gen.rs  parser.rs  tree.rs  types.rs  validate.rs
tests/: pattern_precedence_test.rs  variable_length_test.rs
