[package]
name = "chipi-cli"
version = "0.7.0"
edition = "2024"
description = "CLI tool for generating instruction decoders from .chipi files"
license = "MIT"
authors = ["Luca Marcelli <contact@layle.dev>"]
repository = "https://github.com/ioncodes/chipi"
homepage = "https://github.com/ioncodes/chipi"
readme = "../README.md"
keywords = ["decoder", "instruction-set", "code-generation", "dsl", "disassembler"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "chipi"
path = "src/main.rs"

[dependencies]
chipi-core = { version = "0.7.0", path = "../chipi-core" }
clap = { version = "4", features = ["derive"] }
