[package]
name = "chipi-core"
version = "0.8.1"
edition = "2024"
description = "Core library for chipi: parser, IR, and code generation backends for instruction decoder generation"
license = "MIT"
authors = ["Luca Marcelli <contact@layle.dev>"]
repository = "https://github.com/ioncodes/chipi"
homepage = "https://github.com/ioncodes/chipi"
readme = "../README.md"
keywords = ["decoder", "instruction-set", "code-generation", "dsl", "disassembler"]
categories = ["development-tools", "development-tools::build-utils"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.0+spec-1.1.0"
